--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <form onsubmit="return false;">
+    <form onsubmit="return true;">
       <table border="1px">
         <tr>
           <td><label for="salary">Lương</label><br /></td>
