--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <form onsubmit="return false;">
       <table border="1px">
         <tr>
-          <td><label for="salary">Lương</label><br /></td>
+          <td><label for="salary">Lương 1</label><br /></td>
           <td>
             <input type="number" id="salary" name="salary" value="0" /><br />
           </td>
