--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </tr>
         <tr>
           <td style="text-align: center" colspan="2">
-            <button onclick="myFunction()">Tính lương tháng</button>
+            <button onclick="myFunction()">Tính lương tháng 1</button>
           </td>
         </tr>
         <tr>
